feat: fetch login free user
